updated setup file, refactored nll

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     jax
     numpy
     pandas
+    optax
 # setup_requires # don't need here, have in toml.
 # tests_require # posssibly depreciated, i.e., should be in extra_requires
 # extras are: tests, examples, docs
