--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,9 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     jax
-    numpy
-    pandas
+    ott-jax
+    # numpy
+    # pandas
     optax
 # setup_requires # don't need here, have in toml.
 # tests_require # posssibly depreciated, i.e., should be in extra_requires
