--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Tox
-        run: pip install tox
+      - name: Install testing packages
+        run: pip install tox matplotlib
       - name: Run Tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
