formalized tests for particle_filter and particle_filter_rb

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = test_env
 isolated_build = True
 [testenv]
-deps = matplotlib
+deps =
+  matplotlib
+  pandas
 setenv =
   JAX_ENABLE_X64 = True
 changedir = tests
