refactored simulate and loglik_full to accept x_state, y_meas, theta as arbitrary pytrees

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pfjax
 version = 0.0.1rc1
-author = Pranav Subramani, Jonathan Ramkissoon, Michelle Ko, Mohan Wu, Yunfeng Yang, Martin Lysy
+author = Martin Lysy, Pranav Subramani, Jonathan Ramkissoon, Mohan Wu, Michelle Ko, Kanika Choptra 
 author_email = mlysy@uwaterloo.ca
 description = Particle Filtering in Jax
 long_description = file: README.md
@@ -24,7 +24,7 @@ install_requires =
     ott-jax
     # numpy
     # pandas
-    optax
+    # optax
 # setup_requires # don't need here, have in toml.
 # tests_require # posssibly depreciated, i.e., should be in extra_requires
 # extras are: tests, examples, docs
