first attempt getting author/version number from single source

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pfjax
-version = 0.0.1rc1
-author = Martin Lysy, Pranav Subramani, Jonathan Ramkissoon, Mohan Wu, Michelle Ko, Kanika Choptra 
+version = attr: pfjax.__version__
+author = attr: pfjax.__author__
 author_email = mlysy@uwaterloo.ca
 description = Particle Filtering in Jax
 long_description = file: README.md
