preparing for readthedocs

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/mlysy/pfjax/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GPL-3 License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
@@ -21,13 +21,21 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     jax
+    jaxlib
     ott-jax
-    # numpy
-    # pandas
-    # optax
-# setup_requires # don't need here, have in toml.
-# tests_require # posssibly depreciated, i.e., should be in extra_requires
-# extras are: tests, examples, docs
+
+[options.extras_require]
+docs =
+    optax
+    numpy
+    pandas
+    projplot
+    seaborn
+    myst_nb
+    sphinx_rtd_theme
+    sphinx-autoapi
+    sphinxcontrib-bibtex
+    jupytext
     
 [options.packages.find]
 where = src
