--- a/setup.cfg
+++ b/setup.cfg
@@ -18,11 +18,11 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
 install_requires =
     jax
     jaxlib
-    ott-jax
+    ott-jax >= 0.3.0
 
 [options.extras_require]
 docs =
