updated tox file to run with pytest

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,10 @@ isolated_build = True
 [testenv]
 deps =
   jaxlib
-  matplotlib
+  pytest
   pandas
+  # matplotlib
 setenv =
   JAX_ENABLE_X64 = True
 changedir = tests
-commands = python -m unittest discover
+commands = pytest --ignore=interactive/ --ignore=deprecated/
